--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -123,4 +123,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/order-service:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/game2048:latest
